# LigaPro2

./: .gitignore  build-release.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/_backup_v31/: dashboard.tsx  game-layout.tsx  globals.css  settings.tsx
src/_backup_v31/layout/: NavigationProgress.tsx
src/_backup_v31/match/: MatchTickerView.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/game/: layout.tsx  loading.tsx
src/app/load-game/: page.tsx
src/data/: legendary-players.ts  team-logos.ts
src/lib/: achievement-engine.ts  cup-engine.ts  data-loader.ts  database.ts  day-advance.ts  day-agenda.ts  international-engine.ts  job-offer-engine.ts  loan-engine.ts  manager-engine.ts  match-analysis.ts  match-commentary.ts  match-engine.ts  pack-engine.ts  pixi-match-renderer.ts  player-generator.ts  player-interactions.ts  preseason-engine.ts  rating-engine.ts  schedule-generator.ts  season-engine.ts  season-review.ts  sound-manager.ts  sponsor-engine.ts  stadium-engine.ts  staff-engine.ts  training-engine.ts  transfer-engine.ts  version.ts  virtual-league-engine.ts  week-events.ts  youth-engine.ts
src/store/: game-store.ts  selectors.ts  settings-store.ts
src/types/: finance.ts  game.ts  league.ts  manager.ts  match.ts  news.ts  packs.ts  player.ts  preseason.ts  staff.ts  tactics.ts  team.ts  training.ts  traits.ts  transfer.ts
tests/: integration-test.ts
(+72 files in other folders)
