[package]
name = "liga-pro"
version = "0.31.0"
description = "Liga Pro Fußballmanager"
authors = ["you"]
edition = "2021"

[lib]
name = "liga_pro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
